--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
   <!-- Google Font: Source Sans Pro -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 </head>
-<body>
+<body class="sidebar-collapse">
 <app-root></app-root>
 <!-- jQuery -->
 <script src="assets/plugins/jquery/jquery.min.js"></script>
